# ros_learn

src/act_l/: package.xml  setup.cfg  setup.py
src/act_l/act_l/: cmder.py  doer.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: Trans.action
src/interfaces/msg/: Speak.msg
src/interfaces/srv/: Comb.srv
src/ser_l/: package.xml  setup.cfg  setup.py
src/ser_l/ser_l/: cli.py  ser.py
src/topic_l/: package.xml  setup.cfg  setup.py
src/topic_l/topic_l/: listener.py  talker.py
src/topic_l_c/: CMakeLists.txt  package.xml
src/topic_l_c/src/: Listener.cpp  Speaker.cpp
