<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interfaces</name>
  <version>0.0.0</version>
  <description>Custom ROS2 interface package</description>
  <maintainer email="y@todo.todo">y</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>service_msgs</build_depend>
  <exec_depend>service_msgs</exec_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <build_depend>unique_identifier_msgs</build_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>
  



  <!-- Interface-related dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Optional but recommended for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
