<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ser_l</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="y@todo.todo">y</maintainer>
  <license>TODO: License declaration</license>

  <!-- 移除冗余的依赖声明，保留一个即可 -->
  <depend>interfaces</depend>
  <!-- 删除这一行：<exec_depend>interfaces</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>